--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Share QR Code using UPI App</h2>
 
     <!-- QR Code Image -->
-    <img id="qrCode" src="https://theopentable.in/media/qr_images/qr26.png" alt="UPI QR Code" style="width:200px;height:200px;">
+    <img id="qrCode" src="qr_images/qr26.png" alt="UPI QR Code" style="width:200px;height:200px;">
 
     <!-- Share Button -->
     <button id="shareBtn">Share QR Code</button>
